--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         // Avoid draining fillrate performance on mobile devices,
         // and default/override low DPI mode on mobile browsers.
         config.devicePixelRatio = 1;
-        unityShowBanner('WebGL builds are not supported on mobile devices.');
+        //unityShowBanner('WebGL builds are not supported on mobile devices.'); // 開始時警告文を表示
       } else {
         canvas.style.width = "960px";
         canvas.style.height = "600px";
