--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
       </div>
     </div>
     <script>
+      // カメラ設定
+      const video = document.getElementById("video")
+      navigator.mediaDevices.getUserMedia({
+          video: true,
+          audio: false,
+      }).then(stream => {
+          video.srcObject = stream;
+          video.play()
+      }).catch(e => {
+          console.log(e)
+      })
+
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
       var loadingBar = document.querySelector("#unity-loading-bar");
