--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
       </div>
     </div>
     <script>
+
+        var constraints = { audio: false, video: { facingMode: "environment" } };
+
+        navigator.mediaDevices.getUserMedia(constraints)
+            .then(
+                function (stream) {
+                    var video = document.querySelector('video');
+                    video.srcObject = stream;
+                    video.onloadedmetadata = function (e) {
+                        video.play();
+                    };
+                }
+            )
+
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
       var loadingBar = document.querySelector("#unity-loading-bar");
